@@ -5,11 +5,21 @@ the database has the nexts tables, colums and reations:
 
 ![schematic visualizer](./assets/images/schematic.png)
 
-I used mysql as **Relational Data Base Managment System** (RDBMS) and mysql workbanch to create the **Entity Realitional Diagram** (ERD).
+I used mysql as **Relational Data Base Managment System** (RDBMS) and mysql workbanch 
+to create the **Entity Realitional Diagram** (ERD). the GUI was created with **tkinter** 
+which is a python standard libary for GUI, i used entries, labels, and treeViwers,
+the program is pretty simple, you hit the product code and amount then press confirm and
+it register in a list and insert in the table the product name, amount bought and total,
+it also display on right the last product bought.
+After give all the products hit the "next" button and then send the payment value and it automatically
+show you the change. 
 
 ## Project state
-It's good and works with no bugs (at least not find yet) but still need some improvment like a GUI for better visualization and collection of the data.
-The schematic is organized (might need some optmation) and has the necessary data for a libary (data can be add, removed or changed later).
+It's good and works with no bugs (at least not find yet) already have a GUI for data
+visualization, still can't erase products from sellers it's a problem, The schematic is organized
+(might need some optmation) and has the necessary data for a libary (data can be add, removed or changed later).
+About the code, it's organized with a app class, so i can handler the Libary and Gui variables without
+the necessity of use the global scope.
 
 ## How to test by yourself?
 If you want to see if the program really works fallow the nexts steps:
