@@ -1,5 +1,0 @@
-Id,Code,Item,Price,AgeRestriction,SupllierId,OnStock
-1,1,Manga: Oshi No Ko,31.99,16,1,1
-2,2,Manga: Shingueki No Kiojin',25.99,18,1,3
-3,3,Manga: Naruto,29.99,16,2,2,
-4,4,Manga: Konosubarashi,31.99,16,2,0
