@@ -1,3 +1,0 @@
-Id,Name
-1,Panimi
-2,Manga World
